@@ -6,6 +6,7 @@ package Log::Dispatch::FileRotate::Mutex;
 
 use strict;
 use warnings;
+use Carp 'croak';
 
 use Log::Dispatch::FileRotate::Flock qw(safe_flock flopen);
 use Fcntl ':flock';
@@ -38,12 +39,13 @@ created.  The path will not actually be opened or locked until you call L<lock>.
 =cut
 
 sub new {
-    my ($class, $path) = @_;
+    my ($class, $path, %args) = @_;
 
     $class = ref $class || $class;
 
     my $self = bless {
-        _path => $path
+        _path => $path,
+        %args
     }, $class;
 
     return $self;
@@ -64,6 +66,8 @@ sub lock {
     unless (exists $self->{$pid}) {
         # we have not opened the lockfile in this thread.
         my ($fh, $inode) = flopen($self->{_path});
+
+        $self->_set_permissions;
 
         unless (defined $fh) {
             return 0;
@@ -97,6 +101,24 @@ sub lock {
     # otherwise this $pid is alraedy holding the lock
 
     return $self->{$pid} || 0;
+}
+
+sub _set_permissions {
+    my $self = shift;
+
+    unless (defined $self->{permissions}) {
+        return;
+    }
+
+    my $file = $self->{_path};
+
+    my $current_mode = (stat $self->{_path})[2] & 07777;
+
+    if ($current_mode ne $self->{permissions}) {
+        chmod $self->{permissions}, $self->{_path}
+            or croak sprintf 'Failed to chmod %s to %04o: %s',
+                $self->{_path}, $self->{permissions} & 07777, $!;
+    }
 }
 
 =method unlock()
