@@ -1,6 +1,8 @@
 Revision history for Perl extension Log::Dispatch::FileRotate.
 
 {{$NEXT}}
+    - If the "permissions" param is set, use the same permissions for the lock
+      file that the log file will use. [github #21]
 
 1.35 Wed 43 07 2018
     - Fix lockfile race condition test in Strawberry Perl (Thanks Zak B. Elep)
